--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('helpModal')">&times;</span>
             <h2>Help</h2>
-            <p>1. Select a file using the file input</p>
+            <p>1. Select a file using the file input(The file should not be more than 100mb)</p>
             <p>2. Enter a strong password</p>
             <p>3. Click Encrypt to secure your file or Decrypt to recover it</p>
-            <p>4. The processed file can be downloaded by clicj download button</p>
+            <p>4. The processed file can be downloaded by click download button</p>
             <p>Note: Keep your password safe! Files cannot be recovered without it.</p>
         </div>
     </div>
